1.19.2 backport